Correctly initialize m_hasDataChannels field in RTCPeerConnection

BUG=665884

Review-Url: https://codereview.chromium.org/2507783002
Cr-Commit-Position: refs/heads/master@{#432514}

Former-commit-id: 81bc06645eda2bc80ac82983824418b6dab9dcec